tests/ui/async-await/issues/issue-61187.stderr
error[E0596]: cannot borrow `data` as mutable, as it is not declared as mutable
  --> $DIR/issue-61187.rs:6:5
   |
LL |     data.reverse();
   |     ^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL | async fn response(mut data: Vec<u8>) {
   |                   +++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
